	PR fortran/19269 	* simplify.c (gfc_simplify_transpose): Set the result's typespec from 	the source, not the first element of the return value.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@103982 138bc75d-0d04-0410-961f-82ee72b054a4